--- a/client/my-app/src/pages/home.css
+++ b/client/my-app/src/pages/home.css
@@ -94,6 +94,7 @@ html, body {
   color: #fff;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
   border: none;
+  padding-right: 100px;
 }
 
 .hv-btn-primary:hover {
