--- a/client/my-app/src/mainNav.css
+++ b/client/my-app/src/mainNav.css
@@ -8,7 +8,7 @@
 
   display: flex;
   align-items: center;
-  justify-content: space-between; /* 👈 KEY FIX */
+  justify-content: space-between;
   
   height: 60px;
   padding: 0 32px;
